--- a/css/sportally.css
+++ b/css/sportally.css
@@ -167,32 +167,6 @@ nav {
 
 /*--------SPORTALLY PAGE STYLING--------*/
 
-
-.gallery_links {
-    position: relative;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    min-height: 5vh;
-    font-family: "Work Sans", sans-serif;
-    background-color: var(--background);
-    padding-top: 5px;
-    padding-bottom: 40px;
-}
-
-.gallery_links a{
-    color: var(--pink);
-    text-transform: uppercase;
-    letter-spacing: 2px;
-    font-size: 13px;
-    text-decoration: none;
-}
-
-.gallery_links a:hover{
-    font-weight: bold;
-    color: var(--links);
-}
-
 /*--------GRID LAYOUT--------*/
 .grid {
     margin-top: 15px;
@@ -292,22 +266,22 @@ nav {
 .project_title {
     display: grid;
     grid-column: 2;
-    margin-top: 30px;
     text-transform: uppercase;
+    font-size: 48px;
 }
 
-.project_links{
+.project_links {
     grid-column: 2;
     font-family: "Work Sans", sans-serif;
     padding-top: 0px;
     padding-bottom: 10px;
 }
 
-.project_links a{
+.project_links a {
     color: var(--pink);
     text-transform: uppercase;
     letter-spacing: 2px;
-    font-size: 14px;
+    font-size: 18px;
     text-decoration: none;
 }
 
@@ -316,7 +290,19 @@ nav {
     color: var(--links);
 }
 
-.project_description{
+.project_title_section {
+    grid-column: 2;
+    font-size: 14px;
+    padding-bottom: 30px;
+    text-transform: uppercase;
+}
+
+.project_metadata {
+    font-size: 13px;
+    font-weight: bold;
+}
+
+.project_description {
     grid-column: 2;
     padding-top: 20px;
     font-size: 14px;
@@ -548,7 +534,7 @@ blockquote {
 }
 
 
-@media screen and (max-width:730px){
+@media screen and (max-width:730px) {
     .grid {
         display: grid;
         grid-template-columns: auto 85% auto;
@@ -576,6 +562,12 @@ blockquote {
     }
     .img_heading{
         width: 90%;
+    }
+    .project_title {
+        font-size: 24px;
+    }
+    .project_links a {
+        font-size: 16px;
     }
 }
 
