--- a/css/index.css
+++ b/css/index.css
@@ -45,7 +45,7 @@ nav {
 }
 
 .nav-container {
-    display: none;
+    display: flex;
     background-color: var(--background);
     justify-content: space-around;
     width: 30%;
@@ -657,6 +657,7 @@ nav {
         top: 8vh;
         flex-direction: column;
         align-items: center;
+        display: none;
         width: 40%;
         transform: translateX(100%);
         transition: transform 0.5s ease-in;
