--- a/css/project-page.css
+++ b/css/project-page.css
@@ -1,3 +1,10 @@
+:root {
+    --links: black;
+    --description: #4c4c4c;
+    --pink: #56991c;
+    --paragraphs: #4f4f4f;
+}
+
 * {
     margin: 0px auto;
     padding: 0px;
