--- a/css/index.css
+++ b/css/index.css
@@ -2,7 +2,7 @@
     margin: 0px auto;
     padding: 0px;
     box-sizing: border-box;
-    background-color: var(--background);
+    background-color: #eeeeee;
 }
 
 :root {
