gallery edit for fashion source

--- a/css/index.css
+++ b/css/index.css
@@ -13,7 +13,7 @@
     --gray: #424242;
     --preloaderbg: #191919;
     --sportally: #31c235;
-    --hotelfullerton: #cbab7a;
+    --hotelfullerton: #000000;
     --overit: #f42158;
     --heartsbones: #fcd16b;
 }
