--- a/css/header.css
+++ b/css/header.css
@@ -1,4 +1,5 @@
 :root {
+    --background: #eeeeee;
     --slate: #2b2b2b;
 }
 
@@ -168,4 +169,17 @@ nav {
 }
 .toggle .line3{
     transform: rotate(45deg) translate(-5px,-5px);
+}
+
+/* Footer */
+
+.footer {
+    font-family: "Work Sans", sans-serif;
+    color: black;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-size: 14px;
+    padding: 1px;
+    text-align: center;
+    height: 150px;
 }
